# MKAngel

./: .gitignore  App.js  CLAUDE.md  app.json  buildozer.spec  glm_server.py  install_termux.sh  ladbrokes_bookmarklet.js  main_android.py  package-lock.json  package.json  pick_weekend.py  pick_weekend_sharp.py  pyproject.toml  setup.py  train_bet_picker.py
.github/workflows/: ci.yml  (+2 more)
android/: settings.gradle.kts
app/: __init__.py  angel_ui.py  bet_picker.py  chat.py  cloud.py  coder.py  compliance.py  conductor.py  cowork.py  documents.py  dream_service.py  gestures.py  growth.py  main.py  memory.py  paths.py  providers.py  puriel.py  self_improve.py  senses.py  settings.py  skills.py  swarm.py  tongue.py  tools.py  vestments.py  voice.py  web.py
docs/: CHEATS.md  FIRST_READ.md  HOW-TO.md  freebies_canzuk.md  on_her_nature.md  tardis_session_notes.md  whatsapp_bridge.md
dreams/: tardis_first_walk_20260411_225540.json  tardis_first_walk_20260411_225540.md
glm/: __init__.py  angel.py  bridge.py  dreamer.py  realiser_v2.py  router.py  voice.py
journals/: resources.jsonl  wishlist.jsonl
scripts/: gcp_diag.py  run_whatsapp_bridge.sh  tardis_first_walk.py
tests/: test_angel.py  test_bet_picker.py  test_bridge.py  test_conductor.py  test_core.py  test_cowork.py  test_glm_bridge.py  test_grammars.py  test_mnemo_substrate.py  test_nlg_decoder.py  test_nlg_encoder.py  test_nlg_integration.py  test_nlg_provider.py  test_processors.py  test_realiser.py  test_realiser_v2.py  test_reasoning.py  test_response_grammar.py  test_skills.py  test_swarm.py  test_templates.py
(+134 files in other folders)
